Implement some fixes and tests #798